# fastapi-async-template

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .style.yapf  README.rst  cookiecutter.json  gunicorn_conf.py  manager.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 71876ea7a34e_add_create_date_in_user_table.py  dd03c101d9a8_first_create_script.py
app/: command.py  default.py  handlers.py  main.py  utils.py
app/api/: deps.py
app/api/v1/: __init__.py  login.py  tasks.py  users.py
app/commons/: response.py
app/core/: config.py  security.py
app/crud/: base.py  crud_user.py
app/db/: base.py  session.py
app/models/: user.py
app/schemas/: __init__.py  base.py  user.py
app/tasks/: client.py  startup.py
app/tests/: conftest.py
app/tests/api/v1/: test_login.py  test_users.py
app/tests/utils/: user.py  utils.py
dockerfiles/: Dockerfile
scripts/: init_db.sh  test.sh
{{cookiecutter.project_slug}}/: .flake8  .gitignore  .pre-commit-config.yaml  README.md  manager.py  pyproject.toml
{{cookiecutter.project_slug}}/alembic/versions/: 71876ea7a34e_add_create_date_in_user_table.py  dd03c101d9a8_first_create_script.py
{{cookiecutter.project_slug}}/app/: command.py  handlers.py  main.py
{{cookiecutter.project_slug}}/app/api/: deps.py
{{cookiecutter.project_slug}}/app/api/v1/: users.py
{{cookiecutter.project_slug}}/app/commons/: response.py
{{cookiecutter.project_slug}}/app/core/: config.py  security.py
{{cookiecutter.project_slug}}/app/crud/: base.py  crud_user.py
{{cookiecutter.project_slug}}/app/db/: session.py
{{cookiecutter.project_slug}}/app/models/: user.py
{{cookiecutter.project_slug}}/app/schemas/: base.py  user.py
{{cookiecutter.project_slug}}/app/tests/: conftest.py
{{cookiecutter.project_slug}}/app/tests/api/v1/: test_users.py
{{cookiecutter.project_slug}}/app/tests/utils/: user.py  utils.py
{{cookiecutter.project_slug}}/dockerfiles/: Dockerfile
{{cookiecutter.project_slug}}/scripts/: test.sh
