[tool.poetry]
name = "fastapi-async-template"
version = "0.1.0"
description = "A Python Async Project Template With FastAPI and SQLAlchemy"
authors = ["fcfangcc <swjfc22@live.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "(>=1.4.0,<2.0.0)"
werkzeug = "2.1.1"
fastapi = "0.75"
pydantic = { version = "^1.9", extras = ["email","dotenv"] }
python-jose = "3.3.0"
uvicorn = "0.17.6"
passlib = "1.7.4"
python-multipart = "0.0.5"
aiomysql = { version = "^0.1.0", optional = true }
fire = "^0.4.0"

[tool.poetry.dev-dependencies]
alembic = "^1.7.7"
pre-commit = "*"
pytest = "^6.2.4"
pytest-cover = "^3.0.0"
pytest-mock = "^3.6.1"
pytest-asyncio = "^0.18.3"
requests = "*"
yapf = "^0.31.0"
flake8 = "^3.7"
mypy = "*"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.extras]
mysql = ["aiomysql"]

# if your need
# https://python-poetry.org/docs/repositories/#install-dependencies-from-a-private-repository
[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"


[tool.mypy]
files = "app"
plugins = "pydantic.mypy, sqlmypy"
ignore_missing_imports = true
disallow_untyped_defs = true


[tool.yapf]
BASED_ON_STYLE = "pep8"
COLUMN_LIMIT = 120
SPACES_BEFORE_COMMENT = 2
SPLIT_COMPLEX_COMPREHENSION = true
DEDENT_CLOSING_BRACKETS = true
COALESCE_BRACKETS = true
ALIGN_CLOSING_BRACKET_WITH_VISUAL_INDENT = true
BLANK_LINE_BEFORE_MODULE_DOCSTRING = true
ARITHMETIC_PRECEDENCE_INDICATION = true
SPLIT_ALL_TOP_LEVEL_COMMA_SEPARATED_VALUES = true
SPLIT_ALL_COMMA_SEPARATED_VALUES = false
INDENT_DICTIONARY_VALUE = true
BLANK_LINE_BEFORE_NESTED_CLASS_OR_DEF = false
BLANK_LINES_BETWEEN_TOP_LEVEL_IMPORTS_AND_VARIABLES = 2

[tool.isort]
profile="google"
py_version = 310
force_single_line=false
combine_as_imports=true
lines_between_types=1
lines_after_imports=2
src_paths=["app"]
line_length = 119
