[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author }} <{{ cookiecutter.author_email }}>"]

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.0"
fastapi = "^0.75"
pydantic = { version = "^1.9", extras = ["email","dotenv"] }
python-jose = "3.3.0"
uvicorn = "0.17.6"
passlib = "1.7.4"
python-multipart = "0.0.5"
fire = "^0.4.0"
alembic = "^1.7.7"
aiomysql = { version = "^0.1.0", optional = true }

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
pytest-asyncio = "^0.18.3"
requests = "*"
flake8 = "^3.7"
mypy = "*"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^3.0.0"
black = "^22.3.0"
aiosqlite = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.extras]
mysql = ["aiomysql"]

# if your need
# https://python-poetry.org/docs/repositories/#install-dependencies-from-a-private-repository
[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"


[tool.mypy]
files = "app"
plugins = "pydantic.mypy, sqlmypy"
ignore_missing_imports = true
disallow_untyped_defs = true
python_version = 3.9

[tool.black]
line-length = 119
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile="black"
py_version = 39
force_single_line=false
combine_as_imports=true
lines_between_types=1
lines_after_imports=2
src_paths=["app"]
line_length = 119


[tool.coverage.run]
concurrency = ["greenlet","thread"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "def __repr__",
    "if __name__ == .__main__.",
    # "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "if debug:",
]

[tool.pytest.ini_options]
addopts = "--asyncio-mode auto"
